# llama.cpp

./: dockerfile
.github/workflows/: vulkan-build.yml
common/: common.cpp
ggml/include/: ggml-vulkan.h
ggml/src/ggml-cpu/: ggml-cpu.c
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp  llama_perfetto_stubs.c
include/: llama_perfetto.h  llama_vulkan_prof.h
src/: CMakeLists.txt  llama_vulkan_prof.cpp
src/profiler/: README.md  llama_perfetto.cpp
tools/main/: main.cpp
